[package]
name = "renkobot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP requests
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3" # WebSocket client for Rust
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # JSON parsing
serde_json = "1.0"
log = "0.4" # Logging
env_logger = "0.10"
tracing = "0.1" # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2" # File appender with rotation
dotenv = "0.15" # Environment variable management
decimal = "2.1" # For precision decimal calculations
rust_decimal = "1.32" # For financial calculations
config = "0.13" # Configuration file handling
anyhow = "1.0" # Error handling
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
csv = "1.1" # Read CSV files
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8" # Random number generation for demo mode
polars = { version = "0.51.0", features = ["lazy","strings" , "csv","polars-plan", "temporal", "dtype-datetime"] }
plotters = "0.3.7"
plotters-bitmap = "0.3.7"
clap = { version = "4.5.37", features = ["derive"] }